plugins {
    id 'java'
    id 'java-library'
    id("fr.stardustenterprises.rust.wrapper") version "3.2.5" apply false
    id("fr.stardustenterprises.rust.importer") version "3.2.5"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation files("../lucene/lucene/distribution/build/packages/lucene-11.0.0-SNAPSHOT-itests/modules/lucene-core-11.0.0-SNAPSHOT.jar")
    rust(project(":src:main:rust"))
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}